tests/err01.json.err
Parse error at line 1

001: }
     ^
Expected object, array, number or string
